# ar_proyecto_grupal_02

./: .env.template  .gitignore  README.md  environment.yml  pyproject.toml
notebooks/: ar_proyecto_programacion_02.ipynb  ar_proyecto_programacion_e2.ipynb
weights/checkpoints/: checkpoint  dqn_Enduro-v0_step100000.h5f.index  dqn_Enduro-v0_step1000000.h5f.index  dqn_Enduro-v0_step1100000.h5f.index  dqn_Enduro-v0_step1200000.h5f.index  dqn_Enduro-v0_step1300000.h5f.index  dqn_Enduro-v0_step1400000.h5f.index  dqn_Enduro-v0_step1500000.h5f.index  dqn_Enduro-v0_step1600000.h5f.index  dqn_Enduro-v0_step1700000.h5f.index  dqn_Enduro-v0_step1800000.h5f.index  dqn_Enduro-v0_step1900000.h5f.index  dqn_Enduro-v0_step200000.h5f.index  dqn_Enduro-v0_step2000000.h5f.index  dqn_Enduro-v0_step300000.h5f.index  dqn_Enduro-v0_step400000.h5f.index  dqn_Enduro-v0_step500000.h5f.index  dqn_Enduro-v0_step600000.h5f.index  dqn_Enduro-v0_step700000.h5f.index  dqn_Enduro-v0_step800000.h5f.index  dqn_Enduro-v0_step900000.h5f.index  dqn_SpaceInvaders-v0_step100000.h5f.index  dqn_SpaceInvaders-v0_step1000000.h5f.index  dqn_SpaceInvaders-v0_step1100000.h5f.index  dqn_SpaceInvaders-v0_step1200000.h5f.index  dqn_SpaceInvaders-v0_step1300000.h5f.index  dqn_SpaceInvaders-v0_step1400000.h5f.index  dqn_SpaceInvaders-v0_step1500000.h5f.index  dqn_SpaceInvaders-v0_step1600000.h5f.index  dqn_SpaceInvaders-v0_step1700000.h5f.index  dqn_SpaceInvaders-v0_step1800000.h5f.index  dqn_SpaceInvaders-v0_step1900000.h5f.index  dqn_SpaceInvaders-v0_step200000.h5f.index  dqn_SpaceInvaders-v0_step2000000.h5f.index  dqn_SpaceInvaders-v0_step300000.h5f.index  dqn_SpaceInvaders-v0_step400000.h5f.index  dqn_SpaceInvaders-v0_step500000.h5f.index  dqn_SpaceInvaders-v0_step600000.h5f.index  dqn_SpaceInvaders-v0_step700000.h5f.index  dqn_SpaceInvaders-v0_step800000.h5f.index  (+1 more)
weights/final/: checkpoint  dqn_Enduro-v0_final_step2000000.h5f.index  dqn_SpaceInvaders-v0_best.tmp.h5f.index
weights/final/ddqn/: checkpoint  dqn_Enduro-v0_ddqn_best_step1487150.h5f.index
weights/logs/: dqn_Enduro-v0_ddqn_log.json  dqn_Enduro-v0_log.json  dqn_SpaceInvaders-v0_log.json  test_ddqn.json
