[project]
name = "ar_proyecto_grupal_02"
version = "0.1.0"
requires-python = ">=3.9,<3.12"

dependencies = [
    # General dependencies
    # ===========================================================
    "ipykernel",
    "python-dotenv",
    "numpy>=1.23,<2.0",
    "Pillow>=9.5.0,<10.0",
    "h5py>=3.1.0,<4.0",

    # Deep learning: TF + Keras 2 compatibility layer (requerida por keras-rl2)
    # ===========================================================
    # Desde TF 2.16, Apple Silicon está soportado en el paquete principal (sin tensorflow-macos)
    "tensorflow==2.18.0",
    "tf-keras==2.18.0",

    # RL environment: Gym + Atari — ver [project.optional-dependencies]
    # ===========================================================
    "pyglet==1.5.0",

    # RL agent
    # ===========================================================
    "keras-rl2==1.0.5",

    # Deep learning: PyTorch
    # ===========================================================
    "torch==2.0.1",

    # Agents
    # ===========================================================
    "agents==1.4.0",
]

[project.optional-dependencies]
# Linux / Windows / macOS Intel: versión del profesor
# ===========================================================
# Instalar con: pip install -e ".[default]"
default = [
    "gym==0.17.3",
    "atari-py @ git+https://github.com/Kojoley/atari-py.git",
]

# macOS Apple Silicon: GPU + Atari via ale-py (atari-py roto en ARM64)
# ===========================================================
# Instalar con: pip install -e ".[mac]"  → luego: AutoROM --accept-license
mac = [
    "tensorflow-metal",
    "gym==0.25.2",
    "ale-py==0.7.5",
    "autorom[accept-rom-license]",
]

[tool.setuptools]
packages = []
